syntax = "proto3";

package com.sweetloveinyourheart.srl.auth;

option go_package = "github.com/sweetloveinyourheart/sweet-reel/proto/code/auth/go;grpc";

// AuthService handles all authentication-related logic.
service AuthService {
    // Handles OAuth login with external providers (Google, GitHub, etc.)
    rpc OAuthLogin(OAuthLoginRequest) returns (OAuthLoginResponse);

    // Optionally, validate or refresh tokens later.
    rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}

// ===== Messages =====

message OAuthLoginRequest {
    string provider = 1;        // "google", "github", ...
    string access_token = 2;    // token from provider
}

message User {
    string id = 1;
    string email = 2;
    string name = 3;
    string picture = 4;
    string created_at = 5;
    string updated_at = 6;
}

message OAuthLoginResponse {
    User user = 1;
    string jwt_token = 2;
    bool is_new_user = 3;
}

message ValidateTokenRequest {
    string jwt_token = 1;
}

message ValidateTokenResponse {
    bool valid = 1;
    string user_id = 2;
    string email = 3;
}
